--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,15 @@
   "version": "1.0.0",
   "main": "App.js",
   "scripts": {
-    "start": "nodemon src/Starter/App.js",
+    "start": "node src/Starter/App.js",
+    "dev": "nodemon src/Starter/App.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "engines": {
+    "node": ">=14.0.0"
+  }
 }
